# onoffice

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml
onoffice/: actions.py  api.py  cryptography.py  parameters.py  resources.py
tests/: test_cryptography.py
