[project]
name = "onoffice"
version = "0.1.0"
description = "This library is a python wrapper around the onoffice API. It facilitates interacting with the API in a more pythonic matter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests==2.*"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "twine>=5"
]

[tool.commitizen]
version_provider = "pep621"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "onoffice/*",
]
